# mine-pointcloud-seg

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
assets/: index-4a1Kggbd.css  index-BRZqy38x.js  index-BUqPtPjL.css  index-Bfd9q30K.css  index-C3nY8n6C.js  index-CK3CRc_h.js  index-loxttkHv.css  index-uwPndux_.js
configs/pointcept/: README.md  fractal_pretrain-msc-v1m1-spunet.py  fractal_semseg-pt-v3m1-0-smoke.py  fractal_semseg-pt-v3m1-1-flash.py  fractal_semseg-pt-v3m1-2-labeleff.py  fractal_semseg-pt-v3m2-3-sonata.py  fractal_semseg-spunet-loco.py  fractal_semseg-spunet-v1m1-ssl.py
data/: README.md  mine.meta.json  scene.meta.json
docs/: pipeline.md  setup_gpu.md
scripts/: check_pretrain.sh  check_sweep.sh  finalize_labeleff.sh  prep_sonata_init.py  run_labeleff.sh  run_loco.sh  run_overnight.sh  run_ssl_finetune.sh
src/mpcseg/: __init__.py
src/mpcseg/change/: m3c2_change.py
src/mpcseg/common/: io.py
src/mpcseg/data/: crop_aoi.py  download_dales.py  download_fractal.py  download_mckinley.py  process_dem.py  process_mine.py  to_pointcept.py
src/mpcseg/evaluate/: collect_labeleff.py  collect_ssl.py  label_efficiency.py  loco_eval.py  loco_matrix.py  loco_setup.py  metrics.py
src/mpcseg/infer/: predict.py
src/mpcseg/uncertainty/: run_calibration.py  temperature_scaling.py
src/mpcseg/viz/: export_las_scalars.py  export_web.py  make_potree.py  plotly_viewer.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/components/: Legend.tsx  (+3 more)
(+3 files in other folders)
