[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mpcseg"
version = "0.1.0"
description = "Label-efficient semantic segmentation of post-mining LiDAR point clouds"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "laspy[lazrs,laszip]>=2.5",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
# heavier geometry / viz / change-detection extras (see requirements.txt)
full = [
    "open3d>=0.18",
    "jakteristics>=0.6",
    "cloth-simulation-filter>=1.1.5",
    "py4dgeo>=1.1.0",
    "scikit-learn>=1.3",
    "plotly>=5.18",
    "matplotlib>=3.7",
    "plyfile>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
